--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<body>
 		<div class="container pt-5 pb-5">
 			<div class="row justify-content-center">
-				<div class="col-6">
+				<div class="col-6 course-wrap">
 					<!-- Content -->
 					<div class="card p-3">
 						<form>
